--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "stylus": "^0.54.5",
     "vue": "^2.5.16"
   },
+  "engines": {
+    "node": "8.9.4"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
